# UEAssistant

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.eslint.json  vite.renderer.config.ts
meta/: downloadHelperBinaries.ts
public/locales/en/: gamepage.json  translation.json
src-tauri/: Cargo.toml  build.rs  package.json  pkexec-wrapper.sh  tauri.conf.json
src-tauri/capabilities/: default.json  ue-listing.json
src-tauri/permissions/autogenerated/: default_system_install_dir.toml  default_user_install_dir.toml  epic_login.toml  epic_logout.toml  epic_user_info.toml  home_dir.toml  install_ue.toml  list_available_ue_linux_builds.toml  list_installed_engines.toml  list_ue_versions.toml  open_epic_login_window.toml  pick_install_directory.toml  submit_ue_listing_html.toml  uninstall_ue.toml  update_ue.toml
src-tauri/src/: desktop_entry.rs  download.rs  extract.rs  lib.rs  main.rs  paths.rs  privileged.rs  state.rs
src-tauri/src/commands/: auth.rs  install.rs  mod.rs  ue_engine.rs
src/backend/: config.ts  game_config.ts  launcher.ts  main.ts  main_window.ts  protocol.ts  save_sync.ts  utils.ts
src/backend/__tests__/: protocol.test.ts
src/backend/downloadmanager/: downloadqueue.ts  utils.ts
src/backend/game_overrides/: index.ts
src/backend/logger/: constants.ts  paths.ts
src/backend/shortcuts/: utils.ts
src/backend/storeManagers/: index.ts
src/backend/tray_icon/: tray_icon.ts
src/common/: types.ts  utils.ts
src/frontend/: App.tsx  UeApp.css  UeApp.tsx  index.tsx  types.ts
(+58 files in other folders)
